--- a/.github/workflows/mamoru-unit-test.yml
+++ b/.github/workflows/mamoru-unit-test.yml
@@ -46,5 +46,5 @@ jobs:
         ANDROID_HOME: "" # Skip android test
       run: |
         go mod download
-        go test -p 1 -timeout 1h ./accounts/... ./common/... ./consensus/... ./console/... ./core/... ./crypto/... ./eth/... ./ethclient/... ./ethdb/... ./event/... ./graphql/... ./les/... ./light/... ./log/... ./metrics/... ./miner/... ./mobile/... ./node/... ./p2p/... ./params/... ./rlp/... ./rpc/... ./tests/... ./trie/... ./cmd/geth/... 
+        go test -p 1 -timeout 1h ./mamoru/... ./common/... ./core/...  ./light/... ./log/...  ./params/... 
 
