-fix EVM tracer start

--- a/docker/supervisord/supervisord.conf
+++ b/docker/supervisord/supervisord.conf
@@ -54,7 +54,7 @@ stdout_logfile=/dev/stdout
 
 [program:cron]
 user=root
-command=cron -f
+command=/bin/bash -c 'crontab /etc/cron.d/cron.conf && cron -f'
 autostart=true
 autorestart=true
 stdout_logfile_maxbytes = 0
