--- a/docker/supervisord/supervisord.conf
+++ b/docker/supervisord/supervisord.conf
@@ -44,7 +44,7 @@ stdout_logfile=/dev/stdout
 
 [program:geth_init]
 user=root
-command=/bin/bash -c 'geth init /bsc/config/genesis.json --datadir /data/data snapshot prune-state'
+command=/bin/bash -c 'geth init /bsc/config/genesis.json --datadir /data/data'
 autostart=false
 autorestart=false
 stdout_logfile_maxbytes = 0
