--- a/.github/workflows/mamoru-lint.yml
+++ b/.github/workflows/mamoru-lint.yml
@@ -1,18 +1,20 @@
-name: Build Test
+name: Lint
 
 on:
   push:
-    branches: 
+    branches:
       - master
       - develop
+      - 'mamoru*'
 
   pull_request:
     branches:
       - master
       - develop
+      - 'mamoru*'
 
 jobs:
-  unit-test:
+  golang-lint:
     strategy:
       matrix:
         go-version: [1.21.x]
@@ -23,7 +25,7 @@ jobs:
       uses: actions/setup-go@v3
       with:
         go-version: ${{ matrix.go-version }}
-        
+
     - name: Checkout code
       uses: actions/checkout@v3
 
@@ -43,7 +45,16 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-go-
 
-    - name: Test Build
-      run: |
-        go mod download
-        make geth
+    - run: |
+        go mod tidy
+
+    - name: golangci-lint
+      uses: golangci/golangci-lint-action@v3
+      with:
+        # Optional: version of golangci-lint to use in form of v1.2 or v1.2.3 or `latest` to use the latest version
+        version: v1.55.2
+        working-directory: ./
+        skip-pkg-cache: true
+        skip-cache: true
+        skip-build-cache: true
+        args: --timeout=99m --config ./.golangci.yml
