mamoru sniffer mamoru-sniffer-go v0.11.3 bsc 1.3.10

--- a/.github/workflows/mamoru-docker.yml
+++ b/.github/workflows/mamoru-docker.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - master
       - develop
-      - mamoru
+      - 'mamoru*'
 
 env:
   REPOSITORY: mamorufoundation/bsc-sniffer
