--- a/.github/workflows/mamoru-build-test.yml
+++ b/.github/workflows/mamoru-build-test.yml
@@ -2,9 +2,10 @@ name: Build Test
 
 on:
   push:
-    branches: 
+    branches:
       - master
       - develop
+      - 'mamoru*'
 
   pull_request:
     branches:
@@ -23,7 +24,7 @@ jobs:
       uses: actions/setup-go@v3
       with:
         go-version: ${{ matrix.go-version }}
-        
+
     - name: Checkout code
       uses: actions/checkout@v3
 
