--- a/.github/workflows/mamoru-lint.yml
+++ b/.github/workflows/mamoru-lint.yml
@@ -2,14 +2,16 @@ name: Lint
 
 on:
   push:
-    branches: 
+    branches:
       - master
       - develop
+      - 'mamoru*'
 
   pull_request:
     branches:
       - master
       - develop
+      - 'mamoru*'
 
 jobs:
   golang-lint:
@@ -23,7 +25,7 @@ jobs:
       uses: actions/setup-go@v3
       with:
         go-version: ${{ matrix.go-version }}
-        
+
     - name: Checkout code
       uses: actions/checkout@v3
 
@@ -42,7 +44,7 @@ jobs:
         key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
         restore-keys: |
           ${{ runner.os }}-go-
-    
+
     - run: |
         go mod tidy
 
